# solidity

./: .gitignore  README.md  pyproject.toml  wake.toml
contracts/: ArcaneWood.sol  characters.sol
contracts/common/: account.sol  erc20.sol  reward.sol  utils.sol
contracts/common/IERCS/: IERC165.sol  IERC20.sol  IERC721.sol
contracts/common/securedContract/: SecuredContract.sol
contracts/common/tokens/: ERC20.sol  ERC721.sol  arcane_resource.sol
contracts/common/utils/: ERC721.sol  ERC721Utils.sol  ERC721_receiver.sol
contracts/game/: ArcaneGold.sol  ArcaneWood.sol  characters copy.sol  characters.sol
contracts/mock/: ERC721_receiver.sol  VRFCaller.sol
contracts/oracle/: IRequester.sol  Oracle.sol  OracleAttributes.sol  OracleEvents.sol  OracleModifiers.sol  OracleUtils.sol  delete.sol
oracle/: app.py
oracle/common/: random_org_api.py  utils.py
oracle/database/: base_model.py  connection.py
oracle/models/: oracle_metadata.py  oracle_requests.py  signed_random.py
oracle/process/: monitoring.py  process_random.py
scripts/: deploy_testnet.py
src/oracle/: app.py  config.py
src/oracle/common/: characters_metadata.py  pinata_api.py  random_org_api.py  request_parameters.py
src/oracle/database/: base_model.py
src/oracle/models/: oracle_metadata.py  oracle_requests.py  signed_random.py
src/oracle/process/: generate_random.py  monitoring.py  (+1 more)
tests/: test_arcane_wood.py  test_erc20.py  test_erc721.py
tests/contracts/: test_arcane_character.py  test_arcane_wood.py  test_oracle.py
tests/oracle_server/: test_random_org_api.py
(+8 files in other folders)
