[tool.poetry]
name = "solidity"
version = "0.1.0"
description = ""
authors = ["mrotame <mrotame@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
eth-wake = "^4.9.0"
python-dotenv = "^1.0.1"
web3 = "^6.19.0"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
eth-wake = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
